sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: not found: value trie
  while(!trie){
         ^AlgCocktailSort2:7: error: not found: value trie
  	trie = true
        ^