sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var sorted = false
  var debut:Int = 0
  var fin:Int = getNombreValeurs()-2
  while(!trie){
  	trie = true
    for (i <- debut to fin){
      if (! plusPetit(i,i+1)) {
        echange(i,i+1)
        sorted = false
      }
    }
    fin = fin -1
    for (i <- fin to debut by -1 ){
      if (! plusPetit(i,i+1)) {
        echange(i,i+1)
        sorted = false
      }
    }
    debut = debut +1
    
	}

}